Earn app wallet connect on mobile fix

--- a/packages/app-earn-ui/src/components/layout/Navigation/NavigationMenuMobile.module.scss
+++ b/packages/app-earn-ui/src/components/layout/Navigation/NavigationMenuMobile.module.scss
@@ -69,3 +69,7 @@
     color: var(--earn-protocol-primary-100);
   }
 }
+
+.buttonWrapper {
+  width: 100%;
+}
